@@ -79,6 +79,7 @@ docs = \
 	INSTALL.Libvirt.md \
 	INSTALL.NetBSD.md \
 	INSTALL.RHEL.md \
+	INSTALL.SELinux.md \
 	INSTALL.SSL.md \
 	INSTALL.XenServer.md \
 	INSTALL.userspace.md \
@@ -432,3 +433,4 @@ include datapath-windows/automake.mk
 include datapath-windows/include/automake.mk
 include windows/automake.mk
 include ovn/automake.mk
+include selinux/automake.mk
